fix: gradle repo config for wrapper build

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,13 +5,14 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
+
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
     repositories {
         google()
         mavenCentral()
     }
 }
 
-rootProject.name = "MyApp"
-include ':app' 
+rootProject.name = "co2Emission"
+include ':app'
